manifests/n2app-frontend/kubernetes/overlay/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n2app
  namespace: n2app-frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
        - n2app.pea.co.th
      secretName: tls-secret
  rules:
    - host: n2app.pea.co.th
      http:
        paths:
          - backend:
              service:
                name: n2app
                port:
                  number: 80
            path: /
            pathType: Prefix
